# crew_b2b_meeting_prep

./: .gitignore  README.md  pyproject-old.toml  pyproject.toml
src/crew_b2b_meeting_prep/: crew.py  main.py
src/crew_b2b_meeting_prep/config/: agents.yaml  tasks.yaml
src/crew_b2b_meeting_prep/tools/: __init__.py  email_tool.py
