[project]
name = "crew_b2b_meeting_prep"
version = "0.1.0"
description = "crew_b2b_meeting_prep using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.35.8",
    "sendgrid>=6.11.0",
]

[project.scripts]
crew_b2b_meeting_prep = "crew_b2b_meeting_prep.main:run"
train = "crew_b2b_meeting_prep.main:train"
run_crew = "crew_b2b_meeting_prep.main:run"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
